[package]
name = "simb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures-util = "0.3.30"
rusty-leveldb = "3.0.0"
libp2p = { version = "0.53.2", features = [
    "tokio",
    "tcp",
    "yamux",
    "kad",
    "dns",
    "noise",
    "macros",
    "request-response",
    "json",
    "mdns",
    "gossipsub",
] }
once_cell = "1.19.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
alloy-rlp = { version = "0.3.4", features = ["derive"] }
tracing = "0.1.40"
sha2 = "0.10.8"
serde_json = "1.0.111"
hex = "0.4.3"
rand = "0.8.5"
redb = "1.5.0"
thiserror = "1.0.56"
jsonrpsee = { version = "0.21.0", features = [
    "http-client",
    "macros",
    "server",
] }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
tracing-subscriber = "0.3.18"
pretty_assertions = "1.4.0"
tempdir = "0.3.7"
argh = "0.1.12"
ethereum-types = "0.14.1"
